04.k8s_test/01.istio/03.function_test2/02.traffic_route/01.create_istio_object/helloworld/helloworld-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-gateway
spec:
  hosts:
  - "*"
  gateways:
  - helloworld
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: helloworld
        port:
          number: 80
  - match:
    - header:
        phonenum:
          regexp: /
    route:
    - destination:
        host: helloworld
        subset: num0
