04.k8s_test/01.istio/03.function_test2/02.traffic_route/01.create_istio_object/helloworld/helloworld-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-gateway
  namespace: default
spec:
  gateways:
  - helloworld
  hosts:
  - '*'
  http:
  - match:
    - headers:
        phonenum:
          exact: "1"
    route:
    - destination:
        host: helloworld
        subset: num1
  - route:
    - destination:
        host: helloworld
        subset: num0
